--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "typescript-express-server",
+  "name": "multi-blog-management",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "npx tsc",
+    "build:ui": "ELEVENTY_ENV=PROD npx eleventy",
+    "dev:ui": "ELEVENTY_ENV=DEV npx eleventy --serve",
+    "build:server": "npx tsc",
+    "dev:server": "nodemon ./index.ts",
     "start": "node ./dist/index.js",
-    "dev": "nodemon ./index.ts"
+    "dev": "yarn dev:server && yarn dev:ui"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,9 @@
     "express": "^4.19.1"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-navigation": "^0.3.5",
+    "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "nodemon": "^3.1.0",
