--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:server": "npx tsc",
     "dev:server": "nodemon ./index.ts",
     "start": "node ./dist/index.js",
-    "dev": "yarn dev:server && yarn dev:ui"
+    "dev": "concurrently 'yarn dev:server' 'yarn dev:ui'"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.3"
