--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build:ui": "ELEVENTY_ENV=PROD npx eleventy",
-    "dev:ui": "ELEVENTY_ENV=DEV npx eleventy --serve",
+    "build:ui": "ELEVENTY_ENV=PROD npx @11ty/eleventy",
+    "dev:ui": "ELEVENTY_ENV=DEV npx @11ty/eleventy --serve",
     "build:server": "npx tsc",
     "dev:server": "nodemon ./index.ts",
     "start": "node ./dist/index.js",
